[gd_scene load_steps=25 format=3 uid="uid://bpr653sxwfe1t"]

[ext_resource type="Script" uid="uid://c2upt432vsbp2" path="res://scripts/LevelManager.gd" id="1_et6yy"]
[ext_resource type="Script" uid="uid://bufq3used1ewf" path="res://scripts/managers/GameManager.gd" id="1_ho4xx"]
[ext_resource type="Script" uid="uid://d284oeta4o6hf" path="res://scripts/parameters/ParameterManager.gd" id="2_spmqx"]
[ext_resource type="PackedScene" uid="uid://cd84u8mftwl3" path="res://scenes/GridMap.tscn" id="2_ugdbk"]
[ext_resource type="PackedScene" uid="uid://7pq2ir7ov7l3" path="res://scenes/tools/Hoe.tscn" id="5_5tuyd"]
[ext_resource type="MeshLibrary" uid="uid://d1no833kfkr7y" path="res://assets/tiles/tile_library_upgraded.tres" id="5_gwlxo"]
[ext_resource type="PackedScene" uid="uid://dte7i6vc4ohbf" path="res://scenes/tools/Basket.tscn" id="6_wve4o"]
[ext_resource type="PackedScene" uid="uid://37i3fwe8cg5w" path="res://scenes/tools/WateringCan.tscn" id="8_7ocey"]
[ext_resource type="PackedScene" uid="uid://d3682o52t1ulf" path="res://scenes/editor/debug/GridDebugger.tscn" id="9_t5fhk"]
[ext_resource type="Script" uid="uid://bade5g242g07h" path="res://scripts/orders/OrderManager.gd" id="10_r0qmd"]
[ext_resource type="PackedScene" uid="uid://dwtu6a0ypc6ic" path="res://scenes/ui/LevelDisplay.tscn" id="10_rurev"]
[ext_resource type="PackedScene" uid="uid://cr5dy8no3004" path="res://scenes/ui/OrderUI.tscn" id="11_e62db"]
[ext_resource type="PackedScene" uid="uid://diushxjvndfo7" path="res://scenes/tools/CarrotSeedDispenser.tscn" id="12_0lop4"]
[ext_resource type="PackedScene" uid="uid://caeaachnhh0sv" path="res://scenes/ui/FPSmeter.tscn" id="12_1nqs0"]
[ext_resource type="Script" uid="uid://bruagrb68ehim" path="res://scripts/managers/CameraController.gd" id="13_6p5wk"]
[ext_resource type="PackedScene" uid="uid://cm1c8l7g4cgyb" path="res://scenes/PlayerManager.tscn" id="13_y6ahl"]
[ext_resource type="Script" uid="uid://bg8mt2r4x63su" path="res://scripts/managers/ToolManager.gd" id="15_7kdnr"]
[ext_resource type="Script" uid="uid://ceb4ipo660tts" path="res://scripts/managers/UIManager.gd" id="16_63cbe"]
[ext_resource type="Script" uid="uid://cqiiqjpgfj080" path="res://scripts/managers/GameDataManager.gd" id="17_pc3wf"]
[ext_resource type="Script" uid="uid://bfwuckni6lq53" path="res://scripts/upgrades/UpgradeSystem.gd" id="17_rllxr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p8tdh"]
size = Vector3(12, 10, 1)

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_1nqs0"]

[sub_resource type="Sky" id="Sky_1iba3"]
sky_material = SubResource("PhysicalSkyMaterial_1nqs0")

[sub_resource type="Environment" id="Environment_yxlcp"]
background_mode = 2
background_energy_multiplier = 2.26
sky = SubResource("Sky_1iba3")

[node name="Main" type="Node3D"]
script = ExtResource("1_ho4xx")
always_reset_on_startup = false

[node name="ParameterManager" type="Node" parent="."]
script = ExtResource("2_spmqx")

[node name="LevelManager" type="Node3D" parent="."]
script = ExtResource("1_et6yy")

[node name="GridMap" parent="LevelManager" instance=ExtResource("2_ugdbk")]
mesh_library = ExtResource("5_gwlxo")
data = {
"cells": PackedInt32Array(65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 4, 1, 0, 4, 2, 8, 4, 3, 8, 4, 4, 0, 4, 5, 6, 3, 5, 0, 2, 5, 0, 1, 5, 0, 0, 5, 0, 65535, 5, 0, 65534, 5, 0, 65533, 5, 0, 65532, 5, 0, 65531, 5, 0, 65531, 1, 0, 65531, 2, 0, 65531, 3, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 4, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 3, 2, 0, 3, 4, 0, 2, 4, 0, 1, 4, 0, 65533, 3, 0, 65532, 3, 0, 65534, 3, 0, 65535, 3, 0, 65534, 2, 1, 65533, 2, 0, 65532, 2, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 2, 1, 0, 2, 0, 1, 2, 0, 1, 1, 0, 0, 1, 0, 65535, 1, 0, 2, 1, 0, 2, 2, 0, 3, 1, 0, -5, 6, 1048576, -4, 6, 1048576, -3, 6, 1048576, -2, 6, 1048576, -1, 6, 1048576, -65536, 6, 1048576, -65535, 6, 1048576, -65534, 6, 1048576, -65533, 6, 1048576, -65532, 6, 1048576, -65532, 7, 1048576, -65533, 7, 1048576, -65534, 7, 1048576, -65535, 7, 1048576, -65536, 7, 1048576, -1, 7, 1048576, -2, 7, 1048576, -3, 7, 1048576, -4, 7, 1048576, -5, 7, 1048576, -6, 0, 1048576, -6, 1, 1048576, -7, 2, 1048576, -7, 3, 1048576, -8, 3, 1048576, -8, 4, 1048576, -8, 5, 1048576, -9, 5, 1048576, -9, 6, 1048576, -10, 6, 1048576, -10, 7, 1048576, -9, 7, 1048576, -8, 7, 1048576, -7, 7, 1048576, -6, 7, 1048576, -6, 8, 1048576, -6, 6, 1048576, -6, 5, 1048576, -6, 4, 1048576, -6, 3, 1048576, -5, 3, 1048576, -5, 2, 1048576, -5, 1, 1048576, -5, 0, 1048576, -6, 2, 1048576, -7, 5, 1048576, -8, 6, 1048576, -7, 6, 1048576, -7, 4, 1048576, -10, 5, 1048576, -10, 4, 1048576, -10, 3, 1048576, -10, 2, 1048576, -10, 1, 1048576, -10, 0, 1048576, -10, 65535, 1048576, -10, 65534, 1048576, -9, 2, 1048576, -9, 3, 1048576, -9, 4, 1048576, -8, 2, 1048576, -8, 1, 1048576, -8, 0, 1048576, -8, 65535, 1048576, -8, 65534, 1048576, -9, 65534, 1048576, -9, 65535, 1048576, -9, 0, 1048576, -9, 1, 1048576, -7, 1, 1048576, -7, 65535, 1048576, -7, 65534, 1048576, -7, 65533, 1048576, -7, 0, 1048576, -65532, 65535, 1048576, -65533, 65535, 1048576, -65534, 65534, 1048576, -65535, 65534, 1048576, -65536, 65533, 1048576, -1, 65533, 1048576, -1, 65532, 1048576, -2, 65532, 1048576, -3, 65532, 1048576, -3, 65533, 1048576, -3, 65534, 1048576, -2, 65534, 1048576, -1, 65534, 1048576, -2, 65533, 1048576, -65536, 65534, 1048576, -65536, 65535, 1048576, -65535, 65535, 1048576, -65535, 0, 1048576, -65534, 0, 1048576, -65533, 0, 1048576, -1, 65535, 1048576, -2, 65535, 1048576, -65534, 65535, 1048576, -4, 65534, 1048576, -5, 65534, 1048576, -5, 65535, 1048576, -4, 65535, 1048576, -3, 65535, 1048576, -6, 65535, 1048576, -6, 65534, 1048576, -6, 65533, 1048576, -5, 65533, 1048576, -4, 65533, 1048576, -5, 65532, 1048576, -4, 65532, 1048576, -65535, 65533, 1048576, -65536, 65532, 1048576, -65535, 65532, 1048576, -65534, 65532, 1048576, -65534, 65533, 1048576, -65533, 65533, 1048576, -65532, 65533, 1048576, -65531, 65533, 1048576, -65533, 65534, 1048576, -65532, 65534, 1048576, -65531, 65535, 1048576, -65531, 65534, 1048576, -65530, 65534, 1048576, -65532, 65532, 1048576, -65533, 65532, 1048576, -65531, 7, 1048576, -65531, 6, 1048576, -65531, 5, 1048576, -65531, 4, 1048576, -65531, 3, 1048576, -65532, 5, 1048576, -65532, 4, 1048576, -65532, 3, 1048576, -65532, 2, 1048576, -65531, 2, 1048576, -65531, 1, 1048576, -65531, 0, 1048576, -65530, 65535, 1048576, -65530, 0, 1048576, -65530, 1, 1048576, -65530, 2, 1048576, -65530, 3, 1048576, -65530, 4, 1048576, -65530, 5, 1048576, -65530, 6, 1048576, -65530, 7, 1048576, -65530, 65533, 1048576, -65530, 65532, 1048576, -65531, 65532, 1048576, -10, 8, 1048576, -9, 8, 1048576, -8, 8, 1048576, -7, 8, 1048576, -5, 8, 1048576, -4, 8, 1048576, -3, 8, 1048576, -2, 8, 1048576, -1, 8, 1048576, -65536, 8, 1048576, -65535, 8, 1048576, -65534, 8, 1048576, -65533, 8, 1048576, -65532, 8, 1048576, -65531, 8, 1048576, -65530, 8, 1048576, -8, 65533, 1048576, -9, 65533, 1048576, -10, 65533, 1048576, -6, 65532, 1048576, -7, 65532, 1048576, -8, 65532, 1048576, -10, 65532, 1048576, -9, 65532, 1048576)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0374978, 0.999297, 0, -0.999297, 0.0374978, 0, 4.35684, 17.6625)
light_color = Color(0.819718, 0.859959, 0.96255, 1)
light_energy = 1.928
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 1.348
shadow_enabled = true
shadow_blur = 0.42

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.995128, 0.0193993, 0.096663, -0.0167301, 0.999458, -0.0283479, -0.0971605, 0.0265926, 0.994913, 0, 0, 17.6625)
light_color = Color(0.819718, 0.859959, 0.96255, 1)
light_energy = 0.189
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 1.348
shadow_enabled = true
shadow_blur = 0.42

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.498821, 0.866705, 0, -0.866705, 0.498821, 0, 6.485, 7.071)

[node name="Hoe" parent="." instance=ExtResource("5_5tuyd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.669886, 2.03675, 2.45157)

[node name="Basket" parent="." instance=ExtResource("6_wve4o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.03461, 1.87868, 2.89148)

[node name="WateringCan" parent="." instance=ExtResource("8_7ocey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.28989, 1.1438, 4.67576)

[node name="GridDebugger" parent="." instance=ExtResource("9_t5fhk")]
visible = false
enabled = null
update_interval = null

[node name="UILayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="OrderUI" parent="UILayer" instance=ExtResource("11_e62db")]
metadata/_edit_use_anchors_ = true

[node name="LevelDisplay" parent="UILayer" instance=ExtResource("10_rurev")]
metadata/_edit_use_anchors_ = true

[node name="FPSMeter" parent="UILayer" instance=ExtResource("12_1nqs0")]

[node name="CarrotSeedDispenser" parent="." instance=ExtResource("12_0lop4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.24, 0.75, 0.614)

[node name="GameDataManager" type="Node" parent="."]
script = ExtResource("17_pc3wf")

[node name="PlayerManager" parent="." instance=ExtResource("13_y6ahl")]

[node name="CameraController" type="Node" parent="."]
script = ExtResource("13_6p5wk")
camera_height = 3.5
camera_distance = 2.0
camera_padding = 0.0

[node name="ToolManager" type="Node" parent="."]
script = ExtResource("15_7kdnr")

[node name="UIManager" type="Node" parent="."]
script = ExtResource("16_63cbe")

[node name="UpgradeSystem" type="Node" parent="."]
script = ExtResource("17_rllxr")

[node name="OrderManager" type="Node3D" parent="."]
script = ExtResource("10_r0qmd")

[node name="invisiblewalls" type="Node" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="invisiblewalls"]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisiblewalls/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_p8tdh")

[node name="StaticBody3D2" type="StaticBody3D" parent="invisiblewalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7)
collision_layer = 513
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisiblewalls/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_p8tdh")

[node name="StaticBody3D3" type="StaticBody3D" parent="invisiblewalls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 0, 0)
collision_layer = 513
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisiblewalls/StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_p8tdh")

[node name="StaticBody3D4" type="StaticBody3D" parent="invisiblewalls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 0, 0)
collision_layer = 513
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="invisiblewalls/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_p8tdh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yxlcp")
